Configurando clases for upload files to AWS S3

--- a/UInvFISI/src/main/resources/application.properties
+++ b/UInvFISI/src/main/resources/application.properties
@@ -17,6 +17,12 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 #enabled hot swapping
 spring.thymeleaf.cache=false
 
+#CONFIGURATION FOR AWS S3
+dev.aws.access_key_id=
+dev.aws.secret_access_key=
+dev.s3.bucket=
+dev.s3.region=
+
 #CONFIGURATION UPLOAD FILES
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
