Upload files to AWS S3 ok

--- a/UInvFISI/src/main/resources/application.properties
+++ b/UInvFISI/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_UniInv
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://devalexis.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
+spring.datasource.username=dev_guty
+spring.datasource.password=a06_04_1997a
 spring.datasource.driver-class-name=org.postgresql.Driver
 #JPA/HIBERNATE
 #Show or not log for each sql query
@@ -18,10 +18,10 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 spring.thymeleaf.cache=false
 
 #CONFIGURATION FOR AWS S3
-dev.aws.access_key_id=
-dev.aws.secret_access_key=
-dev.s3.bucket=
-dev.s3.region=
+dev.aws.access_key_id=AKIAR7IUDXDMUA4KFJYX
+dev.aws.secret_access_key=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
+dev.s3.bucket=app-fiisi
+dev.s3.region=us-east-2
 
 #CONFIGURATION UPLOAD FILES
 spring.servlet.multipart.enabled=true
@@ -29,4 +29,4 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 
-server.port=8888
+server.port=5000
