Modificacion del application properties

--- a/UInvFISI/src/main/resources/application.properties
+++ b/UInvFISI/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://devalexis.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
-spring.datasource.username=dev_guty
+#spring.datasource.url=jdbc:postgresql://devalexis.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
+spring.datasource.url=jdbc:postgresql://instance3.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
+#spring.datasource.username=dev_guty
+spring.datasource.username=dev_alexis
 spring.datasource.password=a06_04_1997a
 spring.datasource.driver-class-name=org.postgresql.Driver
 #JPA/HIBERNATE
@@ -25,8 +27,8 @@ dev.s3.region=us-east-2
 
 #CONFIGURATION UPLOAD FILES
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=200MB
-spring.servlet.multipart.max-request-size=215MB
+#spring.servlet.multipart.file-size-threshold=10MB
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 
 server.port=5000
