--- a/UInvFISI/src/main/resources/application.properties
+++ b/UInvFISI/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 #Set here configurations for the database connection
-#spring.datasource.url=jdbc:postgresql://devalexis.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
-spring.datasource.url=jdbc:postgresql://instance3.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
-#spring.datasource.username=dev_guty
-spring.datasource.username=dev_alexis
+spring.datasource.url=jdbc:postgresql://devalexis.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
+#spring.datasource.url=jdbc:postgresql://instance3.c6zgqyhgbdjz.us-east-2.rds.amazonaws.com:5432/db_UInv
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_UInv
+spring.datasource.username=dev_guty
+#spring.datasource.username=dev_alexis
+#spring.datasource.username=postgres
 spring.datasource.password=a06_04_1997a
+#spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 #JPA/HIBERNATE
 #Show or not log for each sql query
@@ -28,7 +31,7 @@ dev.s3.region=us-east-2
 #CONFIGURATION UPLOAD FILES
 spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.file-size-threshold=10MB
-spring.servlet.multipart.max-file-size=500MB
-spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.max-file-size=700MB
+spring.servlet.multipart.max-request-size=700MB
 
 server.port=5000
